[project]
name = "clipboard-to-url"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyperclip==1.8.2",
  "google-cloud-storage==2.10.0",
  "python-dotenv==1.0.0",
  "Pillow==10.0.0",
  "pillow-heif==0.13.0",
  "compact-json==1.5.2",
]
